--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>welcome</title>
+  </head>
+  
+  <body>
+    <p>helloooo</p>
+  </body>  
+ 
+</html>  
